Fixed file paths issue and checkstyle.